[gd_scene load_steps=18 format=3 uid="uid://bx5sqewgaddid"]

[ext_resource type="Script" path="res://scenes/HealthHand.gd" id="1_43pni"]
[ext_resource type="Texture2D" uid="uid://bk0npw0wkajd6" path="res://art/healthHand/healthHand.png" id="2_gcvnc"]
[ext_resource type="Texture2D" uid="uid://c47yrny6q0ss8" path="res://art/healthHand/thumb.png" id="3_lxqt1"]
[ext_resource type="Texture2D" uid="uid://dc2ohfk0vejtx" path="res://art/healthHand/index.png" id="4_bqy1i"]
[ext_resource type="Texture2D" uid="uid://q1ge1deat44u" path="res://art/healthHand/middle.png" id="5_8wuju"]
[ext_resource type="Texture2D" uid="uid://82n3cb33ru6i" path="res://art/healthHand/ring.png" id="6_1iodi"]
[ext_resource type="Texture2D" uid="uid://bggxonx1mhegg" path="res://art/healthHand/pinky.png" id="7_mfhyn"]
[ext_resource type="Texture2D" uid="uid://b7fxtf6m70m7w" path="res://art/healthHand/bloodstain.png" id="8_l5i5a"]
[ext_resource type="Texture2D" uid="uid://dl8l7d6xyubn0" path="res://art/healthHand/cleaver.png" id="9_q4bgs"]
[ext_resource type="AudioStream" uid="uid://cv3ier5gj2gn8" path="res://art/sounds/chop.mp3" id="10_hwrdg"]

[sub_resource type="Animation" id="Animation_ddhue"]
resource_name = "Cleave"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1),
"transitions": PackedFloat32Array(0.5, 0.5, 2),
"update": 0,
"values": [Vector2(15, -96), Vector2(15, -128), Vector2(15, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 10),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../ChopPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_hwrdg")
}],
"times": PackedFloat32Array(1)
}
tracks/2/use_blend = true
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"remove_finger"
}, {
"args": [],
"method": &"send_next_turn"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6nm0b"]
_data = {
"cleave": SubResource("Animation_ddhue")
}

[sub_resource type="Animation" id="Animation_qv84e"]
resource_name = "bleed"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ptq2"]
_data = {
"bleed": SubResource("Animation_qv84e")
}

[sub_resource type="Animation" id="Animation_sdss4"]
resource_name = "in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.25),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_k3sbr"]
resource_name = "out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.25),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ql8cb"]
_data = {
"in": SubResource("Animation_sdss4"),
"out": SubResource("Animation_k3sbr")
}

[node name="HealthHand" type="Node2D"]
modulate = Color(1, 1, 1, 0)
texture_filter = 1
script = ExtResource("1_43pni")

[node name="BaseHandSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_gcvnc")

[node name="Thumb" type="Sprite2D" parent="."]
texture = ExtResource("3_lxqt1")

[node name="Index" type="Sprite2D" parent="."]
texture = ExtResource("4_bqy1i")

[node name="Middle" type="Sprite2D" parent="."]
texture = ExtResource("5_8wuju")

[node name="Ring" type="Sprite2D" parent="."]
texture = ExtResource("6_1iodi")

[node name="Pinky" type="Sprite2D" parent="."]
texture = ExtResource("7_mfhyn")

[node name="Bloodstain" type="Sprite2D" parent="."]
show_behind_parent = true
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("8_l5i5a")

[node name="Cleaver" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
texture = ExtResource("9_q4bgs")
offset = Vector2(15, -96)

[node name="ChopPlayer" type="AudioStreamPlayer" parent="."]

[node name="CleaverAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Cleaver")
libraries = {
"": SubResource("AnimationLibrary_6nm0b")
}

[node name="BloodstainAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Bloodstain")
libraries = {
"": SubResource("AnimationLibrary_2ptq2")
}

[node name="InOut" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ql8cb")
}
